istio-lab/tasks-and-examples/external-service/wikipedia-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-wikipedia
spec:
  hosts:
    - wikipedia.org
  location: MESH_EXTERNAL
  ports:
    - number: 80
      name: example-http
      protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-wiki-rule
spec:
  hosts:
    - wikipedia.org
  http:
    - timeout: 5s
      route:
        - destination:
            host: wikipedia.org
